# daw_json_link_data_gen

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
cmake/: daw-json-link-data-genConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
include/daw/data_faker/concepts/: daw_container_traits.h  daw_container_traits_fwd.h  daw_nullable_value.h  daw_nullable_value_fwd.h  daw_writable_output.h  daw_writable_output_fwd.h
include/daw/data_faker/impl/: daw_data_gen_assert.h
include/daw/json/: daw_json_link_data_gen.h
include/daw/json/impl/: daw_json_generators.h  daw_json_generators_fwd.h
tests/: CMakeLists.txt
tests/include/: citm_test.h  citm_test_json.h  geojson.h  geojson_json.h
tests/src/: daw_json_link_data_gen_test.cpp
